nullaway_error_40CD2FC9-A863-45BF-BE6A-57923303C528.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-web/src/main/java/org/springframework/web/multipart/support/StandardMultipartHttpServletRequest.java:144: error: [NullAway] dereferenced expression this.multipartParameterNames is @Nullable
		if (this.multipartParameterNames.isEmpty()) {
		                                ^
    (see http://t.uber.com/nullaway )
